# mosaic

./: README.md  pyproject.toml
examples/: boltz_notebook.py  example_notebook.py  protenij.py
notebooks/: bindcraft_reproduction.py
scripts/: bindcraft_like.py
src/mosaic/: common.py  notebook_utils.py  optimizers.py  structure_prediction.py
src/mosaic/af2/: alphafold2.py
src/mosaic/alphafold/: utils.py
src/mosaic/alphafold/model/: common_modules.py  modules_multimer.py
src/mosaic/losses/: af2.py  boltz.py  boltz2.py  structure_prediction.py  transformations.py
src/mosaic/models/: af2.py  boltz1.py  boltz2.py  protenix.py
src/mosaic/proteinmpnn/: utils.py
